Fix: Método não apresentava comportamento esperado

--- a/Métodos de Carregamento/index.html
+++ b/Métodos de Carregamento/index.html
@@ -15,7 +15,7 @@
         alert("DOM Carregada");
       });
 
-      $(window).load(function () {
+      $(window).on("load", function () {
         alert("Elementos Carregados!!");
       });
     </script>
