Movimentos do mouse

--- a/05 - Eventos de Mouse/index.html
+++ b/05 - Eventos de Mouse/index.html
@@ -14,9 +14,13 @@
   </head>
   <body>
     <div class="ex1">Aguardando ação</div>
-    <p class="ev1">Um Clique</p>
+    <!-- <p class="ev1">Um Clique</p>
     <p class="ev2">Dois cliques</p>
     <input type="text" class="ev3" />
     <p class="ev4">Passe o mouse</p>
+    <p class="ev5">Clique e solte</p> -->
+    <p class="ev6">Entra e Sai</p>
+    <p class="ev7">Mouse Over</p>
+    <p class="ev8">Mova o mouse no Elemento</p>
   </body>
 </html>
